Changelog
=========

1.0.4 (unreleased)
------------------

- Fix bug #85
  [simone]


1.0.3 (unreleased)
------------------

- Improve worklog, display and select current user on startup
  [gborelli]


1.0.2 (unreleased)
------------------

- Added employee selection in compass history. [simone]


1.0 (unreleased)
----------------

- Improve customer_contact field
  [gborelli]

- Fix compass view's booking retrieval
  [simahawk]

- Add link to project and story in worklog booking details
  [gborelli]

- Add customer_contact in IProject and collective.z3cform.datagridfield dependency
  [gborelli]

- Changed Booking system. Registered a centralized registry to store employees' booking instead of using Dexterity objects
  [simahawk, simonedeponti]

- Compass history improvements
  [gborelli]

- Add simplemanagement.ordernumber viewlet
  [gborelli]

- Add IOrderNumber behavior and remove order_number field from Project CT
  [borelli]

- Iteration view knockoutjs refactoring
  [gborelli]

- Remove grok dependency
  [gborelli]

- Add api module
  [gborelli]

- Add Robotframework test boilerplate
  [gborelli]

- Moved loadcontents scripts in specific module
  [gborelli]

- Improve project view
  [miziodel]

- Improve ajaxforms
  [simahawk]

- Improve add story quick form
  [simahawk]

- Add order_number field on project and catalog index
  [gborelli]

- Added load content profile. This step allow to import sample data
  [gborelli]

- Improve TimeWidget and use it for story form to fix #1
  [simahawk]

- Depend on plone.autoform >= 1.4
  [simahawk]

- added change iteration action to iteration view
  [miziodel]

- added booking action to iteration view
  [miziodel]

- Ajaxified add story form
  [simahawk]

- Add story form hidden by default
  [simahawk]

- Add close icon to actions tooltips
  [simahawk]

- Added IUserStoriesListing adapter to listing stories by user
  [gborelli]

- Removed IMyStoriesListing adapter
  [gborelli]
